--- a/src/main/res/values/strings.xml
+++ b/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
-    <string name="app_name">Sudoku</string>
+    <string name="app_name">Passatemps Sudoku</string>
+    <string name="jugar">Jugar</string>
+    <string name="Maxpuntaucions">Maximes Puntuacions</string>
+
 </resources>
