Implementacion del sudoku parte 1 y 2

--- a/src/main/res/values/strings.xml
+++ b/src/main/res/values/strings.xml
@@ -2,5 +2,6 @@
     <string name="app_name">Passatemps Sudoku</string>
     <string name="jugar">Jugar</string>
     <string name="Maxpuntaucions">Maximes Puntuacions</string>
+    <string name="gamename">Passatemps Sudoku</string>
 
 </resources>
